--- a/index.html
+++ b/index.html
@@ -13,5 +13,18 @@
         <link rel="stylesheet" href="./styles/base.css" />
         <link rel="stylesheet" href="./styles/styles.css" />
     </head>
-    <body></body>
+    <body>
+        <nav class="container nav">
+            <div class="row nav__content">
+                <img src="./assets/Logo.svg" alt="Move" class="nav__logo" />
+                <ul class="nav__links">
+                    <li><a href="#" class="nav__link">Home</a></li>
+                    <li><a href="#" class="nav__link">Pages</a></li>
+                    <li><a href="#" class="nav__link">Blog</a></li>
+                    <li><a href="#" class="nav__link">Portfolio</a></li>
+                </ul>
+                <button class="btn btn-sm btn-contained">Get Starter</button>
+            </div>
+        </nav>
+    </body>
 </html>
