Finish Header content

--- a/index.html
+++ b/index.html
@@ -23,8 +23,31 @@
                     <li><a href="#" class="nav__link">Blog</a></li>
                     <li><a href="#" class="nav__link">Portfolio</a></li>
                 </ul>
-                <button class="btn btn-sm btn-contained">Get Starter</button>
+                <button class="btn btn-sm btn-primary">Get Starter</button>
             </div>
         </nav>
+        <header id="header">
+            <div class="row header__content">
+                <div>
+                    <h1 id="header__heading" class="heading-1">
+                        Move is the perfect development tool
+                    </h1>
+                    <p class="sub-heading header__sub-heading">
+                        We have created software for each employee of your team
+                        to help them do their work more efficiently and better
+                        to plan, track and release great software!
+                    </p>
+                    <div class="header__buttons">
+                        <button class="btn btn-lg btn-secondary">
+                            <img src="./assets/github.svg" alt="" />
+                            View on GitHub
+                        </button>
+                        <button class="btn btn-lg btn-primary">
+                            Go Premium
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
