--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                     </div>
                 </div>
             </div>
+            <img
+                class="header__hero"
+                src="./assets/hero@2x.png"
+                alt="Dashboard image"
+            />
+            <div id="after-header-bg"></section>
         </header>
     </body>
 </html>
