Finish Featured section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
                 src="./assets/hero@2x.png"
                 alt="Dashboard image"
             />
-            <div id="after-header-bg"></section>
+            <div id="after-header-bg"></div>
         </header>
+        <section class="featured-section">
+            <div class="row featured-section__content">
+                <div class="featured-section__heading">
+                    We are trusted by the best in the world
+                </div>
+                <div class="featured-section__logos">
+                    <img src="./assets/goldline.svg" alt="Goldline" />
+                    <img src="./assets/aven.svg" alt="Aven" />
+                    <img src="./assets/kanba.svg" alt="Kanba" />
+                    <img src="./assets/kyan.svg" alt="Kyan" />
+                    <img src="./assets/spotify.svg" alt="spotify" />
+                </div>
+            </div>
+        </section>
     </body>
 </html>
