Finish Advantages section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 id="header__heading" class="heading-1">
                         Move is the perfect development tool
                     </h1>
-                    <p class="sub-heading header__sub-heading">
+                    <p class="sub-heading-1 header__sub-heading">
                         We have created software for each employee of your team
                         to help them do their work more efficiently and better
                         to plan, track and release great software!
@@ -48,10 +48,11 @@
                     </div>
                 </div>
             </div>
+            x
             <img
                 class="header__hero"
                 src="./assets/hero@2x.png"
-                alt="Dashboard image"
+                alt="advantages image"
             />
             <div id="after-header-bg"></div>
         </header>
@@ -66,6 +67,48 @@
                     <img src="./assets/kanba.svg" alt="Kanba" />
                     <img src="./assets/kyan.svg" alt="Kyan" />
                     <img src="./assets/spotify.svg" alt="spotify" />
+                </div>
+            </div>
+        </section>
+        <section class="advantages-section">
+            <div class="row advantages-section__content">
+                <div class="advantages-section__info">
+                    <h2>Everything you need in one place</h2>
+                    <p class="sub-heading-2">
+                        Powerful metrics to better understand your business are
+                        right at your fingertips, once you start working with
+                        them!
+                    </p>
+                    <ul class="advantages-section__list">
+                        <li>
+                            <img src="./assets/checkmark.svg" alt="V" />
+                            Real-time data
+                        </li>
+                        <li>
+                            <img src="./assets/checkmark.svg" alt="V" />
+                            FDIC Insured
+                        </li>
+                        <li>
+                            <img src="./assets/checkmark.svg" alt="V" />
+                            End-to-end encryption
+                        </li>
+                        <li>
+                            <img src="./assets/checkmark.svg" alt="V" />
+                            REST API enabled
+                        </li>
+                    </ul>
+                    <a href="#" class="cta-link"
+                        >Explore more features
+
+                        <img
+                            src="./assets//icon-arrow-right.svg"
+                            alt=""
+                            class="cta-link__arrow"
+                        />
+                    </a>
+                </div>
+                <div class="advantages-section__image">
+                    <img src="./assets/advantage-dashboard@2x.png" " alt="" />
                 </div>
             </div>
         </section>
