Finish Package section

--- a/index.html
+++ b/index.html
@@ -112,5 +112,42 @@
                 </div>
             </div>
         </section>
+        <section class="package-section">
+            <div class="row package-section__content">
+                <div class="package-section__image">
+                    <img src="./assets/console@2x.png" alt="Console" />
+                </div>
+                <div class="package-section__info">
+                    <h2>Universal access to your data</h2>
+                    <p class="sub-heading-2">
+                        Get access to your data through any additional software
+                        or try integrating it into our system, while we show you
+                        resource usage statistics.
+                    </p>
+                    <div class="package-section__details">
+                        <div class="package-section__detail">
+                            <span class="package-score">5.0/5.0</span>
+                            <span>Review Score</span>
+                        </div>
+                        <div class="package-section__detail">
+                            <span class="package-installs">300K+</span>
+                            <span>Monthly Installs</span>
+                        </div>
+                        <div class="package-section__detail">
+                            <span class="package-satisfaction">99.99%</span>
+                            <span>Satisfaction</span>
+                        </div>
+                    </div>
+                    <a href="#" class="cta-link"
+                        >Explore more features
+                        <img
+                            src="./assets//icon-arrow-right.svg"
+                            alt=""
+                            class="cta-link__arrow"
+                        />
+                    </a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
