--- a/index.html
+++ b/index.html
@@ -149,5 +149,20 @@
                 </div>
             </div>
         </section>
+        <section class="video-section">
+            <div class="row">
+                <h2>Build it from ground up</h2>
+                <p class="sub-heading-2">
+                    Create your projects from scratch with the powerful Move
+                    Toolkit. We will tell you more about it in our video.
+                </p>
+                <iframe
+                    allowfullscreen=""
+                    allow="autoplay"
+                    src="https://www.youtube.com/embed/DGQwd1_dpuc?rel=0&amp;showinfo=0&amp;autoplay=0"
+                    class="video-section__video"
+                ></iframe>
+            </div>
+        </section>
     </body>
 </html>
