--- a/index.html
+++ b/index.html
@@ -156,12 +156,14 @@
                     Create your projects from scratch with the powerful Move
                     Toolkit. We will tell you more about it in our video.
                 </p>
-                <iframe
-                    allowfullscreen=""
-                    allow="autoplay"
-                    src="https://www.youtube.com/embed/DGQwd1_dpuc?rel=0&amp;showinfo=0&amp;autoplay=0"
-                    class="video-section__video"
-                ></iframe>
+                <div class="video-section__video-wrapper">
+                    <iframe
+                        allowfullscreen=""
+                        allow="autoplay"
+                        src="https://www.youtube.com/embed/DGQwd1_dpuc?rel=0&amp;showinfo=0&amp;autoplay=0"
+                        class="video-section__video"
+                    ></iframe>
+                </div>
             </div>
         </section>
     </body>
