Create feature cards, finish Features section

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             />
             <div id="after-header-bg"></div>
         </header>
-        <section class="featured-section">
-            <div class="row featured-section__content">
-                <div class="featured-section__heading">
+        <section class="trustedby-section">
+            <div class="row trustedby-section__content">
+                <div class="trustedby-section__heading">
                     We are trusted by the best in the world
                 </div>
-                <div class="featured-section__logos">
+                <div class="trustedby-section__logos">
                     <img src="./assets/goldline.svg" alt="Goldline" />
                     <img src="./assets/aven.svg" alt="Aven" />
                     <img src="./assets/kanba.svg" alt="Kanba" />
@@ -163,6 +163,96 @@
                         src="https://www.youtube.com/embed/DGQwd1_dpuc?rel=0&amp;showinfo=0&amp;autoplay=0"
                         class="video-section__video"
                     ></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="features-section">
+            <div class="row">
+                <h2>Go Move with ease</h2>
+                <p class="sub-heading-2">
+                    Learn all the features and features to make your process
+                    even faster and more exciting. Our product is ready to give
+                    you a pleasant interaction experience.
+                </p>
+                <div class="features-section__cards">
+                    <div class="feature-card">
+                        <img
+                            src="./assets/planning.svg"
+                            alt="Planning"
+                            class="feature-card__icon"
+                        />
+                        <h6 class="feature-card__heading">Flexible planning</h6>
+                        <p class="feature-card__description">
+                            The rich features of our platform make it easy for
+                            your team member to plan with your product.
+                        </p>
+                    </div>
+                    <div class="feature-card">
+                        <img
+                            src="./assets/execution.svg"
+                            alt="Execution"
+                            class="feature-card__icon"
+                        />
+                        <h6 class="feature-card__heading">
+                            Transparent execution
+                        </h6>
+                        <p class="feature-card__description">
+                            Our software brings transparency to your work
+                            processes and the entire ecosystem.
+                        </p>
+                    </div>
+                    <div class="feature-card">
+                        <img
+                            src="./assets/results.svg"
+                            alt="Results"
+                            class="feature-card__icon"
+                        />
+                        <h6 class="feature-card__heading">
+                            Actionable results
+                        </h6>
+                        <p class="feature-card__description">
+                            Extensive reporting functionality gives your team
+                            critical insight into their agile process.
+                        </p>
+                    </div>
+                    <div class="feature-card">
+                        <img
+                            src="./assets/evolution.svg"
+                            alt="Evolution"
+                            class="feature-card__icon"
+                        />
+                        <h6 class="feature-card__heading">
+                            Scalable evolution
+                        </h6>
+                        <p class="feature-card__description">
+                            Move software helps people in your team work with
+                            project resolution without losing quality.
+                        </p>
+                    </div>
+                    <div class="feature-card">
+                        <img
+                            src="./assets/cloud.svg"
+                            alt="Storage"
+                            class="feature-card__icon"
+                        />
+                        <h6 class="feature-card__heading">Cloud Storage</h6>
+                        <p class="feature-card__description">
+                            You can store your projects without leaving our
+                            product. Move Cloud will help you do this.
+                        </p>
+                    </div>
+                    <div class="feature-card">
+                        <img
+                            src="./assets/analitics.svg"
+                            alt="Analitics"
+                            class="feature-card__icon"
+                        />
+                        <h6 class="feature-card__heading">Analitics API</h6>
+                        <p class="feature-card__description">
+                            When working with metrica our API manager can help
+                            you connect it safely and get the latest statistics.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
