--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         </section>
         <section class="video-section">
             <div class="row">
-                <h2>Build it from ground up</h2>
-                <p class="sub-heading-2">
+                <h2 class="centered-h2">Build it from ground up</h2>
+                <p class="sub-heading-2 centered-subheading-2">
                     Create your projects from scratch with the powerful Move
                     Toolkit. We will tell you more about it in our video.
                 </p>
@@ -168,8 +168,8 @@
         </section>
         <section class="features-section">
             <div class="row">
-                <h2>Go Move with ease</h2>
-                <p class="sub-heading-2">
+                <h2 class="centered-h2">Go Move with ease</h2>
+                <p class="sub-heading-2 centered-subheading-2">
                     Learn all the features and features to make your process
                     even faster and more exciting. Our product is ready to give
                     you a pleasant interaction experience.
@@ -254,6 +254,19 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="pricing-section">
+            <h2 class="centered-h2">Expand your options with a subscription</h2>
+            <p class="sub-heading-2 centered-subheading-2">
+                Choose the plan that suits you best! More features will be
+                available thanks to individual plans.
+            </p>
+            <div class="slider">
+                <input type="checkbox" id="slider-checkbox" />
+                <label class="slider__track" for="slider-checkbox">
+                    <span class="slider__thumb"></span>
+                </label>
             </div>
         </section>
     </body>
