Create Pricing section

--- a/index.html
+++ b/index.html
@@ -257,16 +257,179 @@
             </div>
         </section>
         <section class="pricing-section">
-            <h2 class="centered-h2">Expand your options with a subscription</h2>
-            <p class="sub-heading-2 centered-subheading-2">
-                Choose the plan that suits you best! More features will be
-                available thanks to individual plans.
-            </p>
-            <div class="slider">
-                <input type="checkbox" id="slider-checkbox" />
-                <label class="slider__track" for="slider-checkbox">
-                    <span class="slider__thumb"></span>
-                </label>
+            <div class="row">
+                <h2 class="centered-h2">
+                    Expand your options with a subscription
+                </h2>
+                <p class="sub-heading-2 centered-subheading-2">
+                    Choose the plan that suits you best! More features will be
+                    available thanks to individual plans.
+                </p>
+                <div class="pricing-section__plan-switcher">
+                    <span>Bill Monthly</span>
+                    <input type="checkbox" id="slider-checkbox" checked />
+                    <label class="slider__track" for="slider-checkbox">
+                        <span class="slider__thumb"></span>
+                    </label>
+                    <span>Bill Anually</span>
+                </div>
+                <div class="pricing-section__plans">
+                    <div class="pricing-card">
+                        <h5 class="pricing-card__heading">Free</h5>
+                        <p class="pricing-card__text pricing-card__subheading">
+                            Free start for your project on our platform.
+                        </p>
+                        <div class="pricing-card__price">
+                            <h4>$0</h4>
+                            <p class="pricing-card__text">
+                                Per User / Per Year
+                            </p>
+                        </div>
+                        <ul class="pricing-card__list">
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Access to editing all blocks
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Editing blocks together
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />Access to all premium icons
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                A dedicated domain
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Ability to integrate with CMS
+                            </li>
+                        </ul>
+                        <button class="btn btn-lg btn-full-width btn-secondary">
+                            Try for free
+                        </button>
+                    </div>
+                    <div class="pricing-card">
+                        <h5 class="pricing-card__heading">Standard</h5>
+                        <p class="pricing-card__text pricing-card__subheading">
+                            For a small company that wants to show what it's
+                            worth.
+                        </p>
+                        <div class="pricing-card__price">
+                            <h4>$300</h4>
+                            <p class="pricing-card__text">
+                                Per User / Per Year
+                            </p>
+                        </div>
+                        <ul class="pricing-card__list">
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Access to editing all blocks
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Editing blocks together
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />Access to all premium icons
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                A dedicated domain
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Ability to integrate with CMS
+                            </li>
+                        </ul>
+                        <button class="btn btn-lg btn-full-width btn-primary">
+                            Start 14 Days Free Trial
+                        </button>
+                    </div>
+                    <div class="pricing-card">
+                        <h5 class="pricing-card__heading">Ultimate</h5>
+                        <p class="pricing-card__text pricing-card__subheading">
+                            For a large company that wants to achieve maximum
+                            returns
+                        </p>
+                        <div class="pricing-card__price">
+                            <h4>$600</h4>
+                            <p class="pricing-card__text">
+                                Per User / Per Year
+                            </p>
+                        </div>
+                        <ul class="pricing-card__list">
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Access to editing all blocks
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Editing blocks together
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />Access to all premium icons
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                A dedicated domain
+                            </li>
+                            <li class="pricing-card__text">
+                                <img
+                                    src="./assets/checkmark-blue.svg"
+                                    alt="V"
+                                />
+                                Ability to integrate with CMS
+                            </li>
+                        </ul>
+                        <button class="btn btn-lg btn-full-width btn-secondary">
+                            Start 14 Days Free Trial
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
     </body>
