Create CTA section

--- a/index.html
+++ b/index.html
@@ -432,5 +432,18 @@
                 </div>
             </div>
         </section>
+        <section class="cta-section">
+            <div class="row">
+                <div class="cta-section__text">
+                    <h5>Secure your data in minutes</h5>
+                    <p>Prevent security breaches and save money</p>
+                </div>
+                <div class="cta-section__buttons">
+                    <button class="btn btn-lg btn-secondary">Learn More</button>
+                    <button class="btn btn-lg btn-primary">Get Started</button>
+                </div>
+            </div>
+        </section>
+        <section></section>
     </body>
 </html>
