--- a/index.html
+++ b/index.html
@@ -444,6 +444,63 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <footer>
+            <div class="row footer__content">
+                <div class="company__brand">
+                    <img
+                        src="./assets/Logo.svg"
+                        alt="Move"
+                        class="company__logo"
+                    />
+                    <p>
+                        Move - Multipurpose Design Template will help you
+                        develop your website design.
+                    </p>
+                    <div class="company__socials">
+                        <img src="./assets/Dribbble.svg" alt="Dribble" />
+                        <img src="./assets/Facebook.svg" alt="Facebook" />
+                        <img src="./assets/Twitter.svg" alt="Twitter" />
+                        <img src="./assets/YouTube.svg" alt="YouTube" />
+                    </div>
+                </div>
+                <div class="company__links">
+                    <h6>Home</h6>
+                    <ul>
+                        <li><a href="#" class="nav__link">Desktop App</a></li>
+                        <li><a href="#" class="nav__link">Mobile App</a></li>
+                        <li><a href="#" class="nav__link">SaaS</a></li>
+                        <li><a href="#" class="nav__link">Event</a></li>
+                        <li><a href="#" class="nav__link">Software</a></li>
+                    </ul>
+                </div>
+                <div class="company__links">
+                    <h6>Pages</h6>
+                    <ul>
+                        <li><a href="#" class="nav__link">About Us</a></li>
+                        <li><a href="#" class="nav__link">Careers</a></li>
+                        <li><a href="#" class="nav__link">Case Studies</a></li>
+                        <li><a href="#" class="nav__link">Pricing</a></li>
+                    </ul>
+                </div>
+                <div class="company__links">
+                    <h6>Blog</h6>
+                    <ul>
+                        <li><a href="#" class="nav__link">Blog Listing</a></li>
+                        <li><a href="#" class="nav__link">Blog Article</a></li>
+                        <li><a href="#" class="nav__link">Newsroom</a></li>
+                    </ul>
+                </div>
+                <div class="company__links">
+                    <h6>Portfolio</h6>
+                    <ul>
+                        <li><a href="#" class="nav__link">Portfolio</a></li>
+                        <li><a href="#" class="nav__link">Single Case</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row company__legal">
+                <p>&#169; 2019-2020 Move Multipurpose Design Template.</p>
+            </div>
+        </footer>
     </body>
 </html>
