Clean up media queries, add flexbox fix to safari

--- a/index.html
+++ b/index.html
@@ -511,5 +511,6 @@
                 <p>&#169; 2019-2020 Move Multipurpose Design Template.</p>
             </div>
         </footer>
+        <script defer src="js/script.js"></script>
     </body>
 </html>
