Fix footer nav links spacing

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                     <ul class="advantages-section__list">
                         <li>
                             <img src="./assets/checkmark.svg" alt="V" />
-                            Real-time data
+                            <span>Real-time data</span>
                         </li>
                         <li>
                             <img src="./assets/checkmark.svg" alt="V" />
-                            FDIC Insured
+                            <span>FDIC Insured</span>
                         </li>
                         <li>
                             <img src="./assets/checkmark.svg" alt="V" />
-                            End-to-end encryption
+                            <span>End-to-end encryption</span>
                         </li>
                         <li>
                             <img src="./assets/checkmark.svg" alt="V" />
-                            REST API enabled
+                            <span>REST API enabled</span>
                         </li>
                     </ul>
                     <a href="#" class="cta-link"
