--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <nav class="container nav">
             <div class="row nav__content">
                 <img src="./assets/Logo.svg" alt="Move" class="nav__logo" />
-                <ul class="nav__links">
+                <!-- <ul class="nav__links">
                     <li><a href="#" class="nav__link">Home</a></li>
                     <li><a href="#" class="nav__link">Pages</a></li>
                     <li><a href="#" class="nav__link">Blog</a></li>
                     <li><a href="#" class="nav__link">Portfolio</a></li>
                 </ul>
-                <button class="btn btn-sm btn-primary">Get Starter</button>
+                <button class="btn btn-sm btn-primary">Get Starter</button> -->
             </div>
         </nav>
         <header id="header">
