--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <script defer src="js/script.js"></script>
     </head>
     <body>
-        <nav class="container nav">
+        <nav class="nav">
             <div class="row nav__content">
                 <img src="./assets/Logo.svg" alt="Move" class="nav__logo" />
-                <!-- <ul class="nav__links">
-                    <li><a href="#" class="nav__link">Home</a></li>
-                    <li><a href="#" class="nav__link">Pages</a></li>
-                    <li><a href="#" class="nav__link">Blog</a></li>
-                    <li><a href="#" class="nav__link">Portfolio</a></li>
+                <ul class="nav__links">
+                    <li><a href="#" class="nav__link">Why Us</a></li>
+                    <li><a href="#" class="nav__link">Installation</a></li>
+                    <li><a href="#" class="nav__link">Demo</a></li>
+                    <li><a href="#" class="nav__link">Features</a></li>
+                    <li><a href="#" class="nav__link">Pricing</a></li>
                 </ul>
-                <button class="btn btn-sm btn-primary">Get Starter</button> -->
+                <button class="btn btn-sm btn-primary nav__cta-btn">
+                    Get Starter
+                </button>
             </div>
         </nav>
         <header id="header">
@@ -453,7 +456,6 @@
         <div class="row">
             <div class="cta-section__seperator"></div>
         </div>
-
         <footer>
             <div class="row footer__content">
                 <div class="company__brand">
