Create mobile navigation

--- a/index.html
+++ b/index.html
@@ -27,10 +27,37 @@
                     <li><a href="#" class="nav__link">Pricing</a></li>
                 </ul>
                 <button class="btn btn-sm btn-primary nav__cta-btn">
-                    Get Starter
+                    Get Started
                 </button>
+                <img
+                    src="./assets/hamburger-icon.svg"
+                    alt="Menu"
+                    id="menu-icon"
+                />
             </div>
         </nav>
+
+        <div class="mobile-nav">
+            <div class="row">
+                <div class="mobile-nav__header">
+                    <img src="./assets/Logo.svg" alt="Move" class="nav__logo" />
+                    <img src="./assets/x-icon.svg" alt="Menu" id="close-icon" />
+                </div>
+
+                <ul class="mobile-nav__links">
+                    <li><a href="#" class="mobile-nav__link">Why Us</a></li>
+                    <li>
+                        <a href="#" class="mobile-nav__link">Installation</a>
+                    </li>
+                    <li><a href="#" class="mobile-nav__link">Demo</a></li>
+                    <li><a href="#" class="mobile-nav__link">Features</a></li>
+                    <li><a href="#" class="mobile-nav__link">Pricing</a></li>
+                    <button class="btn btn-lg btn-primary mobile-nav__cta">
+                        Get Started
+                    </button>
+                </ul>
+            </div>
+        </div>
         <header id="header">
             <div class="row header__content">
                 <div>
