Toggle mobile navigatio

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
             </div>
         </nav>
 
-        <div class="mobile-nav">
+        <nav class="mobile-nav">
             <div class="row">
                 <div class="mobile-nav__header">
                     <img src="./assets/Logo.svg" alt="Move" class="nav__logo" />
-                    <img src="./assets/x-icon.svg" alt="Menu" id="close-icon" />
+                    <img
+                        src="./assets/x-icon.svg"
+                        alt="Close"
+                        id="close-icon"
+                    />
                 </div>
 
                 <ul class="mobile-nav__links">
@@ -57,7 +61,7 @@
                     </button>
                 </ul>
             </div>
-        </div>
+        </nav>
         <header id="header">
             <div class="row header__content">
                 <div>
