Add animation to mobile navbar

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             <div class="row nav__content">
                 <img src="./assets/Logo.svg" alt="Move" class="nav__logo" />
                 <ul class="nav__links">
-                    <li><a href="#" class="nav__link">Why Us</a></li>
-                    <li><a href="#" class="nav__link">Installation</a></li>
-                    <li><a href="#" class="nav__link">Demo</a></li>
-                    <li><a href="#" class="nav__link">Features</a></li>
-                    <li><a href="#" class="nav__link">Pricing</a></li>
+                    <li><a href="#advantages" class="nav__link">Why Us</a></li>
+                    <li>
+                        <a href="#packages" class="nav__link">Installation</a>
+                    </li>
+                    <li><a href="#video" class="nav__link">Demo</a></li>
+                    <li><a href="#features" class="nav__link">Features</a></li>
+                    <li><a href="#pricing" class="nav__link">Pricing</a></li>
                 </ul>
                 <button class="btn btn-sm btn-primary nav__cta-btn">
                     Get Started
@@ -49,7 +51,11 @@
                 </div>
 
                 <ul class="mobile-nav__links">
-                    <li><a href="#" class="mobile-nav__link">Why Us</a></li>
+                    <li>
+                        <a href="#advantages" class="mobile-nav__link"
+                            >Why Us</a
+                        >
+                    </li>
                     <li>
                         <a href="#" class="mobile-nav__link">Installation</a>
                     </li>
@@ -105,7 +111,7 @@
                 </div>
             </div>
         </section>
-        <section class="advantages-section">
+        <section class="advantages-section" id="advantages">
             <div class="row advantages-section__content">
                 <div class="advantages-section__info">
                     <h2>Everything you need in one place</h2>
@@ -147,7 +153,7 @@
                 </div>
             </div>
         </section>
-        <section class="package-section">
+        <section class="package-section" id="packages">
             <div class="row package-section__content">
                 <div class="package-section__image">
                     <img src="./assets/console@2x.png" alt="Console" />
@@ -184,7 +190,7 @@
                 </div>
             </div>
         </section>
-        <section class="video-section">
+        <section class="video-section" id="video">
             <div class="row">
                 <h2 class="centered-h2">Build it from ground up</h2>
                 <p class="sub-heading-2 centered-subheading-2">
@@ -201,7 +207,7 @@
                 </div>
             </div>
         </section>
-        <section class="features-section">
+        <section class="features-section" id="features">
             <div class="row">
                 <h2 class="centered-h2">Go Move with ease</h2>
                 <p class="sub-heading-2 centered-subheading-2">
@@ -291,7 +297,7 @@
                 </div>
             </div>
         </section>
-        <section class="pricing-section">
+        <section class="pricing-section" id="pricing">
             <div class="row">
                 <h2 class="centered-h2">
                     Expand your options with a subscription
